--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1121,3 +1121,30 @@
   color: #666679;
 }
 }
+
+// TEMP STYLES
+.d-none {
+  display: none !important;
+}
+
+.menu__link--drop{
+  span {
+    border-bottom: 2px solid transparent;
+  }
+}
+
+.head-menu__link--active {
+  .menu__link--drop{
+    span {
+      border-bottom: 2px solid #237BEF;
+    }
+  }
+}
+
+.menu__link--active {
+  .submenu__link {
+    .menu__link-text {
+      border-bottom: 2px solid #237BEF;
+    }
+  }
+}
