--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -1,9 +1,9 @@
 <!-- start component -->
-<div class="first-screen" style="background-image: url(assets/img/ieo/bg.png);">
+<div class="first-screen">
   <div class="fs-wr">
     <div class="fs-wr-inner">
       <div class="fs-image-container">
-
+          <img src="assets/img/ieo/bg.jpg" alt="">
       </div>
       <div class="fs-content" *ngIf="IEOData">
         <div class="bittorrent">
