--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -16,6 +16,7 @@
     [currentStage]="currentStage"
     [userBalanceBTC]="userBalanceBTC"
     (onLogin)="onLogin()"
+    (onRefreshIEOStatus)="onRefreshIEOStatus()"
     (onBuy)="onBuy()"
     [IEOData]="IEOData"
     [ieoLoading]="ieoLoading"
