added ieo mobile balances

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -48,19 +48,9 @@
 
       <app-ieo-table-mob
         *ngSwitchCase="Tab.IEO"
-        [balances]="fiatBalances$ | async"
-        [countEntries]="countOfFiatEntries$ | async"
-        [countOfPendingRequests]="countOfPendingRequests$ | async"
-        [countPerPage]="countPerPage"
-        [countOfEntries]="getCountOfEntries() | async"
-        [currentPage]="currentPage"
+        [IEOData]="IEOData"
         [Tab]="Tab"
         [currTab]="currTab"
-        [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
-        [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
-        [loading]="loading$ | async"
-        (onToggleAllZero)="onToggleAllZeroMobile($event)"
-        (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
         (onSelectTab)="onSelectTab($event)"
