--- a/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
+++ b/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
@@ -6,19 +6,18 @@
           {{'Balances' | translate}}
         </h1>
       </div>
-      <div class="widget__search-btn" (click)="toggleShowSearchPopup(true)">
+      <!-- <div class="widget__search-btn" (click)="toggleShowSearchPopup(true)">
         <svg fill="none" height="14" viewBox="0 0 16 16" width="14" xmlns="http://www.w3.org/2000/svg">
           <path d="M7.22222 13.6444C8.78354 13.6444 10.2149 13.0869 11.3278 12.1605L14.1947 15.0275C14.4247 15.2575 14.7975 15.2575 15.0275 15.0275C15.2575 14.7975 15.2575 14.4247 15.0275 14.1947L12.1605 11.3278C13.0869 10.2149 13.6444 8.78354 13.6444 7.22222C13.6444 3.67557 10.7689 0.8 7.22222 0.8C3.67557 0.8 0.8 3.67557 0.8 7.22222C0.8 10.7689 3.67557 13.6444 7.22222 13.6444ZM12.4667 7.22222C12.4667 10.1188 10.1188 12.4667 7.22222 12.4667C4.32563 12.4667 1.97778 10.1188 1.97778 7.22222C1.97778 4.32563 4.32563 1.97778 7.22222 1.97778C10.1188 1.97778 12.4667 4.32563 12.4667 7.22222Z" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.4"></path>
         </svg>
         Search
-      </div>
+      </div> -->
     </div>
     <div class="tabs balance__tabs-mob">
       <button
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.CRYPTO}"
         (click)="onSelectTab.emit(Tab.CRYPTO)"
-        [disabled]="loading"
       >
         {{'Crypto' | translate}}
       </button>
@@ -26,7 +25,6 @@
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.FIAT}"
         (click)="onSelectTab.emit(Tab.FIAT)"
-        [disabled]="loading"
       >
         {{'Fiat' | translate}}
       </button>
@@ -34,7 +32,6 @@
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.IEO}"
         (click)="onSelectTab.emit(Tab.IEO)"
-        [disabled]="loading"
       >
         {{'IEO' | translate}}
       </button>
@@ -49,44 +46,24 @@
         (click)="openSendMoneyPopup.emit(true)">
         {{'Send money' | translate}}
       </button>
-
-      <!-- <div *ngIf="loading">
-        <app-loader size="small"></app-loader>
-      </div> -->
     </div>
   </div>
   <!--filters start-->
   <form action="">
     <div class="balance__filters">
-      <ng-container [ngSwitch]="currTab">
-        <!-- <app-dynamic-input
-          *ngSwitchCase="Tab.CRYPTO"
-          [value]="currValue"
-          [options]="cryptoCurrenciesForChoose && getCryptoDynamicIData"
-          (onChange)="onChangeCurrPair($event)"
-          (onSelect)="onSearchCoin($event.id)"
-          ></app-dynamic-input> -->
-         <!--  <app-dynamic-input
-          *ngSwitchCase="Tab.FIAT"
-          [value]="currValue"
-          [options]="fiatCurrenciesForChoose && getFiatDynamicIData"
-          (onChange)="onChangeCurrPair($event)"
-          (onSelect)="onSearchCoin($event.id)"
-          ></app-dynamic-input> -->
-      </ng-container>
 
-      <span>{{'Price in' | translate}}</span>
+      <!-- <span>{{'Price in' | translate}}</span>
       <div class="dropdown" #dropdown (click)="onToggleDropdown()">
         <div class="dropdown__btn">{{priceIn}}</div>
         <ul class="dropdown__list" (click)="onSelectCurrency($event)">
           <li class="dropdown__item" *ngFor="let item of currenciesArr">{{item}}</li>
         </ul>
-      </div>
-      <label class="toggler">
+      </div> -->
+      <!-- <label class="toggler">
         <input type="checkbox" name="togglerZero" [(ngModel)]="hideAllZero" (change)="onToggleAllZeroTrigger()">
         <span class="toggler__indicate"></span>
       </label>
-      <span>{{'Hide zero' | translate}}</span>
+      <span>{{'Hide zero' | translate}}</span> -->
     </div>
   </form>
   <!--filters end-->
@@ -100,7 +77,6 @@
     [infiniteScrollThrottle]="50"
     [scrollWindow]="false"
     [horizontal]="false"
-    (scrolled)="onLoadMoreTrigger()"
   >
     <!--table-mob start-->
     <table class="table table--mob" [ngClass]="{'balance-ieo': currTab === Tab.IEO}">
@@ -112,24 +88,24 @@
         </tr>
       </thead>
       <tbody class="table__body table__body--none-shadow">
-        <!-- <ng-container> -->
-          <tr class="table__row--mob" (click)="onShowIEOMobDetails(null)">
+        <ng-container *ngFor="let ieo of IEOData">
+          <tr class="table__row--mob" (click)="onShowIEOMobDetails(ieo)">
             <td class="table__cell table__cell--tal">
               <div class="balance__currency">
                 <div class="balance__currency-icon">
                   <img src="assets/img/currency-icons/citrus.svg">
                 </div>
                 <div>
-                  <span>Citrus</span>
+                  <span>{{ieo.currencyDescription}}</span>
                   <!-- <span class="balance__currency-name">{{item.currencyDescription}}</span> -->
                 </div>
               </div>
             </td>
             <td class="table__cell table__cell--tal">
-              <span>10345.89543217</span>
+              <span>{{ieo.availableAmount || 0 | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}}</span>
             </td>
             <td class="table__cell table__cell--tar">
-              <div>0.00043400 BTC</div>
+              <div>{{ieo.rate || 0 | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</div>
               <!-- <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency:'USD' | formatCurrency}}</div> -->
               <!-- <span class="txt-small txt-red">–0.24%</span> -->
             </td>
@@ -142,140 +118,15 @@
           <tr>
             <td colspan="4">
               <div class="table__row-mob-line"></div>
-            </td>
-          </tr>
-          <tr class="table__row--mob" (click)="onShowIEOMobDetails(null)">
-            <td class="table__cell table__cell--tal">
-              <div class="balance__currency">
-                <div class="balance__currency-icon">
-                  <img src="assets/img/currency-icons/citrus.svg">
-                </div>
-                <div>
-                  <span>Citrus</span>
-                  <!-- <span class="balance__currency-name">{{item.currencyDescription}}</span> -->
-                </div>
-              </div>
-            </td>
-            <td class="table__cell table__cell--tal">
-              <span>10345.89543217</span>
-            </td>
-            <td class="table__cell table__cell--tar">
-              <div>0.00043400 BTC</div>
-              <!-- <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency:'USD' | formatCurrency}}</div> -->
-              <!-- <span class="txt-small txt-red">–0.24%</span> -->
-            </td>
-            <td class="table__cell table__cell--arr-mob">
-              <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">
-              <div class="table__row-mob-line"></div>
-            </td>
-          </tr>
-          <tr class="table__row--mob" (click)="onShowIEOMobDetails(null)">
-            <td class="table__cell table__cell--tal">
-              <div class="balance__currency">
-                <div class="balance__currency-icon">
-                  <img src="assets/img/currency-icons/citrus.svg">
-                </div>
-                <div>
-                  <span>Citrus</span>
-                  <!-- <span class="balance__currency-name">{{item.currencyDescription}}</span> -->
-                </div>
-              </div>
-            </td>
-            <td class="table__cell table__cell--tal">
-              <span>10345.89543217</span>
-            </td>
-            <td class="table__cell table__cell--tar">
-              <div>0.00043400 BTC</div>
-              <!-- <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency:'USD' | formatCurrency}}</div> -->
-              <!-- <span class="txt-small txt-red">–0.24%</span> -->
-            </td>
-            <td class="table__cell table__cell--arr-mob">
-              <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">
-              <div class="table__row-mob-line"></div>
-            </td>
-          </tr>
-          <tr class="table__row--mob" (click)="onShowMobDetails(item)">
-            <td class="table__cell table__cell--tal">
-              <div class="balance__currency">
-                <div class="balance__currency-icon">
-                  <img src="assets/img/currency-icons/citrus.svg">
-                </div>
-                <div>
-                  <span>Citrus</span>
-                  <!-- <span class="balance__currency-name">{{item.currencyDescription}}</span> -->
-                </div>
-              </div>
-            </td>
-            <td class="table__cell table__cell--tal">
-              <span>10345.89543217</span>
-            </td>
-            <td class="table__cell table__cell--tar">
-              <div>0.00043400 BTC</div>
-              <!-- <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency:'USD' | formatCurrency}}</div> -->
-              <!-- <span class="txt-small txt-red">–0.24%</span> -->
-            </td>
-            <td class="table__cell table__cell--arr-mob">
-              <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">
-              <div class="table__row-mob-line"></div>
-            </td>
-          </tr>
-          <tr class="table__row--mob" (click)="onShowMobDetails(item)">
-            <td class="table__cell table__cell--tal">
-              <div class="balance__currency">
-                <div class="balance__currency-icon">
-                  <img src="assets/img/currency-icons/citrus.svg">
-                </div>
-                <div>
-                  <span>Citrus</span>
-                  <!-- <span class="balance__currency-name">{{item.currencyDescription}}</span> -->
-                </div>
-              </div>
-            </td>
-            <td class="table__cell table__cell--tal">
-              <span>10345.89543217</span>
-            </td>
-            <td class="table__cell table__cell--tar">
-              <div>0.00043400 BTC</div>
-              <!-- <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency:'USD' | formatCurrency}}</div> -->
-              <!-- <span class="txt-small txt-red">–0.24%</span> -->
-            </td>
-            <td class="table__cell table__cell--arr-mob">
-              <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
             </td>
           </tr>
 
-
-          <tr>
-            <td colspan="4">
-              <div class="table__row-mob-line"></div>
-            </td>
-          </tr>
-        <!-- </ng-container> -->
-        <!-- <tr class="table__row--mob" *ngIf="!balances.length && !loading">
+        </ng-container>
+        <tr class="table__row--mob" *ngIf="!IEOData.length">
           <td class="table__cell table__cell--tac" colspan="4">
             {{'No matching records found' | translate}}
           </td>
-        </tr> -->
+        </tr>
       </tbody>
     </table>
   <!-- table-mob end -->
@@ -298,10 +149,10 @@
   </div>
 </div>
 
-<app-balance-search-mob
+<!-- <app-balance-search-mob
   [currTab]="currTab"
   [Tab]="Tab"
   (closeModal)="toggleShowSearchPopup($event)"
   (selectedCurrency)="onShowMobDetails($event)"
   *ngIf="isShowSearchPopup">
-</app-balance-search-mob>
+</app-balance-search-mob> -->
