--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -82,7 +82,7 @@
 
           </li>
           <li class="menu__item menu__item--with-submenu" routerLinkActive="head-menu__link--active">
-            <ng-container >
+            <ng-container *ngIf="!isProduction">
                 <!-- *ngIf="!isProduction" -->
               <a class="menu__link menu__link--drop">
                 <span class="menu__link-text">{{'IEO' | translate}}</span>
@@ -369,17 +369,18 @@
         <a class="menu-mob__link" (click)="setMobileWidget('chat')" [routerLink]="['dashboard']" [queryParams]="{widget: 'chat'}" *ngIf="isAuthenticated"><span
           class="menu-mob__link-text">{{'Chat' | translate}}</span>
         </a>
-        <div class="menu-mob__drop-wrap">
+        <div class="menu-mob__drop-wrap" *ngIf="!isProduction">
           <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(IEO_FLAG)" [ngClass]="{'menu-mob__link--active': showIEOList}">
-            <span class="menu-mob__link-text">{{'IEO' | translate}}</span></a>
-            <div class="menu-mob__wrap-links" *ngIf="showIEOList">
-              <a class="menu-mob__link" (click)="mobileLinkClick()" [routerLink]="'/ieo/' + ieo.id" *ngFor="let ieo of (ieoList$ | async)">{{ieo.currencyDescription}} ({{ieo.status | showStageStatus}})</a>
-            </div>
-          </div>
-          <a class="menu-mob__link" onclick="openChat()">
-            <span class="menu-mob__link-text">Support</span>
+            <span class="menu-mob__link-text">{{'IEO' | translate}}</span>
           </a>
-          <a class="account-info__email cursor-pointer menu-mob__link" (click)="onLogout()" *ngIf="isAuthenticated">{{'logout' | translate}}</a>
+          <div class="menu-mob__wrap-links" *ngIf="showIEOList">
+            <a class="menu-mob__link" (click)="mobileLinkClick()" [routerLink]="'/ieo/' + ieo.id" *ngFor="let ieo of (ieoList$ | async)">{{ieo.currencyDescription}} ({{ieo.status | showStageStatus}})</a>
+          </div>
+        </div>
+        <a class="menu-mob__link" onclick="openChat()">
+          <span class="menu-mob__link-text">Support</span>
+        </a>
+        <a class="account-info__email cursor-pointer menu-mob__link" (click)="onLogout()" *ngIf="isAuthenticated">{{'logout' | translate}}</a>
         </nav>
       </div>
     </div>
