--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -143,8 +143,7 @@
             [showNotFoundTip]="existQuberaAccounts"
           ></app-dynamic-input>
         </ng-container>
-        <ng-container  *ngIf="isProd">
-          <!-- *ngIf="isProd" -->
+        <ng-container  *ngIf="!isProd">
           <app-dynamic-input
             *ngSwitchCase="Tab.IEO"
             [value]="currValue"
@@ -181,7 +180,7 @@
         (click)="onSelectTab(Tab.FIAT)"
       >
         {{'Fiat Balances' | translate}}
-    </button>
+      </button>
     <!--<button-->
     <!--class="tabs__item qubera-tab">-->
     <!--<div class="qubera-icon">-->
@@ -221,22 +220,23 @@
             <span>{{'Qubera Balance' | translate}}</span>
           </button> -->
           <button
+            *ngIf="!isProd"
             [disabled]="loading$ | async"
             class="tabs__item"
             [ngClass]="{'tabs__item--active': currTab === Tab.IEO}"
             (click)="onSelectTab(Tab.IEO)"
-            >
+          >
             {{'IEO' | translate}}
           </button>
         <button
-        class="tabs__item"
-        [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
-        (click)="onSelectTab(Tab.PR)"
-        [disabled]="loading$ | async"
+          class="tabs__item"
+          [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
+          (click)="onSelectTab(Tab.PR)"
+          [disabled]="loading$ | async"
         >
-        <span>{{'Pending requests' | translate}}</span>
-        <span class="indicate">{{countOfPendingRequests$ | async}}</span>
-      </button>
+          <span>{{'Pending requests' | translate}}</span>
+          <span class="indicate">{{countOfPendingRequests$ | async}}</span>
+        </button>
 
     </div>
     <div class="balance__hide-zero" *ngIf="currTab !== Tab.PR">
