fix comunity link text

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -113,7 +113,7 @@
               <ul class="menu submenu__list">
                 <li class="submenu__item">
                   <a class="submenu__link" href="https://t.me/exrates_official" target="blank">
-                    <span class="menu__link-text">EXRATES Community</span>
+                    <span class="menu__link-text">Community World</span>
                   </a>
                 </li>
             <!-- <li class="submenu__item">
