fix toast style

--- a/src/app/shared/components/top-notification/top-notification.component.scss
+++ b/src/app/shared/components/top-notification/top-notification.component.scss
@@ -3,6 +3,7 @@
   padding: 0!important;
   background: none;
 }
+  
 .ieo-notifications{
     &.success{
       background: #32A071;
@@ -90,6 +91,7 @@
           justify-content: flex-start;
           p{
             line-height: 1.3;
+                max-width: calc(100% - 4em);
             br{
               display: block;
             }
