--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -40,6 +40,13 @@
             Identity Verification
           </a>
         </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/api-keys']">
+            Api keys
+          </a>
+        </li>
         <!-- <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
