--- a/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.html
+++ b/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.html
@@ -29,8 +29,8 @@
           *ngFor="let item of showSellDataReverse; let i = index"
           (click)="onSelectOrder(item)"
         >
-          <div class="td">{{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]}}</div>
-          <div class="td">{{item.total | roundCurrency | formatCurrency}}</div>
+          <div class="td">{{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1] | orderBookCutBigNum}}</div>
+          <div class="td">{{item.total | roundCurrency | formatCurrency  | orderBookCutBigNum}}</div>
           <!-- <div class="td">{{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]}}</div> -->
           <div class="bg-bar" [style.width]="sellVisualizationArray[i] + '%'"></div>
         </div>
