--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -17,6 +17,7 @@
     top: 176px;
     left: -99px;
     height: 100%;
+    max-height: calc(100% - 176px);
     //max-width: 0px;
     //overflow-x: hidden;
     //overflow-y: auto;
