--- a/src/app/settings/api-keys/api-keys.component.html
+++ b/src/app/settings/api-keys/api-keys.component.html
@@ -12,7 +12,7 @@
       <div class="wrap-input__line"></div>
     </div>
       <button
-        (click)="open2FAPopup()"
+        (click)="createApiKey()"
       class="btn settings__form-btn settings__password-btn settings__form-btn--active">
         {{'Create new key' | translate}}
       </button>
