--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -89,10 +89,11 @@
       </span>
     </td>
     <td class="table__cell txt-grey">
-      <span>
+      <span *ngIf="!authService.isVipUser">
         {{item.commissionFixedAmount | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
         {{item.currencyPairName | splitCurrency: 2}}
       </span>
+      <span *ngIf="authService.isVipUser">0.0</span>
     </td>
     <td class="table__cell">
       <span>
