--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -51,8 +51,8 @@
             </div>
             <div class="table__details-item">
               <div class="table__details-item-title">{{'Fee' | translate}}</div>
-              <div class="table__details-item-value" *ngIf="!authService.isVipUser">{{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
-              <div class="table__details-item-value" *ngIf="authService.isVipUser">0.0</div>
+              <div class="table__details-item-value" *ngIf="!isVipUser">{{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
+              <div class="table__details-item-value" *ngIf="isVipUser">0.0</div>
             </div>
             <div class="table__details-item">
               <div class="table__details-item-title">{{'In total' | translate}}</div>
