--- a/src/app/settings/api-keys/api-keys.component.scss
+++ b/src/app/settings/api-keys/api-keys.component.scss
@@ -10,3 +10,29 @@
   width: 50%;
   max-width: 50%;
 }
+
+.api-key-container {
+  width: 100%;
+  margin-top: 100px;
+}
+
+.api-key-item {
+  width: 100%;
+  margin-bottom: 30px;
+  padding: 10px;
+  border: 1px solid rgba(148, 194, 255, .5);
+  border-radius: 5px;
+  .key-name {
+    margin-bottom: 15px;
+  }
+  .api-key {
+    margin-bottom: 15px;
+  }
+  .key-controls {
+    display: flex;
+    justify-content: space-between
+  }
+  .api-key-delete-btn {
+    position: relative;
+  }
+}
